# pydata_payment_handler

./: .gitignore  Makefile  README.md  generate_payments.py  handler_py.py  handler_rs.py  handler_rs_parallel.py  handler_rs_single_threaded.py  helpers.py  plot_dist.py  pyproject.toml
payment_handler_rs/: Cargo.toml  pyproject.toml
payment_handler_rs/src/: lib.rs
reports/python/: run_1.prof
