[tool.poetry]
name = "payment-handler-case"
version = "0.1.0"
description = ""
authors = ["Mike Kraus <mike.kraus@mollie.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
maturin = "1.7.0"
snakeviz = "2.2.0"
pandas = "2.2.2"
seaborn = "0.13.2"
matplotlib = "3.9.1"
joblib = "1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
